--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="style.css" type="text/css" />
-	<title>S c h u l t z & A s s o c i a t e s</title>
+	<title>S c h u l t z  &  A s s o c i a t e s</title>
 </head>
 
 <body>
@@ -12,16 +12,16 @@
 
 	<a href="index.html"><div id="logo"></div></a>
 
-	<div id="addr">f i f t y &nbsp; s e v e n &nbsp; m a i n &nbsp; s t r e e t &nbsp; b e d f o r d, &nbsp; o h i o <br> t e l &nbsp; n o. &nbsp; 6 5 6. &nbsp; 2 0 1. &nbsp; 3 4 5 6</div>
-
 	<nav>
-		<p><a href="vision.html">o u r &nbsp; v i s i o n</a></p>
-		<p>o u r &nbsp; t e a m</p>
-		<!-- <p><a href="team.html">o u r &nbsp; t e a m</a></p> -->
-		<p>g a l l e r y</p>
-		<!-- <p><a href="gallery.html">g a l l e r y</a></p> -->
-		<p><a href="contact.html">e m a i l &nbsp; u s</a></p>
+		<p><a href="vision.html">our vision</a></p>
+		<p>our team</p>
+		<p>gallery</p>
+		<p><a href="contact.html">email us</a></p>
 	</nav>
+
+	<div id="addr">fifty seven main street bedford, ohio <br> &#9742; 656.201.3456</div>
+
+
 
 	<div id="gallery">
 		<table id="grid">
